fixed layout issue

--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -3,6 +3,7 @@
 ********************************/
 .featuresContainerMain {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   padding: 80px 30px;
   gap: 55px;
